--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+    qr_code_scanner: ^1.0.0
+    qr_flutter: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -45,7 +47,7 @@ dependencies:
 dev_dependencies:
   flutter_test:
     sdk: flutter
-    qr_code_scanner: ^1.0.0
+    
 
   # The "flutter_lints" package below contains a set of recommended lints to
   # encourage good coding practices. The lint set provided by the package is
