--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,8 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
-    qr_code_scanner: ^1.0.0
-    qr_flutter: ^4.0.0
+#    qr_code_scanner: ^1.0.0
+#    qr_flutter: ^4.0.0
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -43,6 +43,7 @@ dependencies:
   firebase_storage: ^12.3.5
 #  qr_code_scanner: ^1.0.1
   fluttertoast: ^8.2.8
+  icons_plus: ^5.0.0
 
 dev_dependencies:
   flutter_test:
@@ -67,7 +68,7 @@ flutter:
   # the material Icons class.
   uses-material-design: true
   assets:
-    - assets/splashScreen.jpeg
+    - assets/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/to/resolution-aware-images
