--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,7 @@ dependencies:
 #  qr_code_scanner: ^1.0.1
   fluttertoast: ^8.2.8
   icons_plus: ^5.0.0
+  cloud_firestore: ^5.5.0
 
 dev_dependencies:
   flutter_test:
