--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   fluttertoast: ^8.2.8
   icons_plus: ^5.0.0
   cloud_firestore: ^5.5.0
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
