--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   cloud_firestore: ^5.5.0
   url_launcher: ^6.3.1
   uuid: ^4.5.1
+  qr_flutter: ^4.1.0
 
 dev_dependencies:
   flutter_test:
