--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,8 @@ dependencies:
   url_launcher: ^6.3.1
   uuid: ^4.5.1
   qr_flutter: ^4.1.0
+  mobile_scanner: ^4.0.0
+
 
 dev_dependencies:
   flutter_test:
